--- a/AmazonEventBridge/composer.json
+++ b/AmazonEventBridge/composer.json
@@ -2,7 +2,7 @@
     "name": "magento/module-amazon-event-bridge",
     "description": "N/A",
     "require": {
-        "php": "~7.1.3||~7.2.0",
+        "php": "~7.1.3||~7.2.0||~7.3.0",
         "magento/framework": "*",
         "magento/module-amazon-event-bridge-api": "*",
         "aws/aws-sdk-php": "^3.112"
